Migrate to 2024.06.x (#4)
* switched to 2024.06.x and fixed dependencies

* updated pmd rules

* fixed deprecateds

* pmd rules

* fixed complier warning

* java 21 workflow

* fixed pom